--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 :root {
-  --primaryFont: "Maven Pro", sans-serif;
+  --primaryFont: "Lato Heavy", sans-serif;
   /* --primaryFont: 'Montserrat', sans-serif; */
   /* --primaryFont: 'Raleway', sans-serif; */
 }
