--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap");
 @font-face {
-  font-family: "BestermindRegular";
-  src: url("./assets/fonts/Bestermind/BestermindRegular.ttf");
-  src: url("./assets/fonts/Bestermind/BestermindRegular.ttf")
+  font-family: "LatoHeavy";
+  src: url("./assets/fonts/LatoHeavy/Lato-Heavy.ttf");
+  src: url("./assets/fonts/LatoHeavy/Lato-Heavy.ttf")
       format("embedded-opentype"),
-    url("./assets/fonts/Bestermind/BestermindRegular.ttf") format("truetype");
+    url("./assets/fonts/LatoHeavy/Lato-Heavy.ttf") format("truetype");
 }
 
 * {
